# devopenspace-elm-todo

./: .dockerignore  .gitignore  README.md  makefile
Backend/Haskell/: .dockerignore  .gitignore  README.md  TodoServer.cabal  docs.md  makefile  settings.yaml  stack.yaml
Backend/Haskell/app/: Main.hs
Backend/Haskell/src/: App.hs  Authentication.hs  Context.hs  Db.hs  Imports.hs  Page.hs  RestApi.hs  RouteApi.hs  Settings.hs  Ws.hs
Backend/Haskell/src/Api/: ListsApi.hs  RouteApi.hs  TodosApi.hs  UsersApi.hs
Backend/Haskell/src/Context/: Carrier.hs  Internal.hs
Backend/Haskell/src/Db/: Carrier.hs  Internal.hs  Lists.hs  Tasks.hs  Users.hs
Backend/Haskell/src/Db/Users/: Carrier.hs
Backend/Haskell/src/Models/: ListId.hs  Lists.hs  Tasks.hs  User.hs
Backend/Haskell/src/Models/User/: Effects.hs  Internal.hs
Backend/Haskell/static/: style.css
Docker/: docker-compose.yml
Docker/app/: dockerfile
Elm/: .dockerignore  app.css  elm.json  index.html  index.js  makefile  package-lock.json  package.json  ports.js
Elm/src/: AppUrl.elm  Auth.elm  Flags.elm  LocalStorage.elm  Login.elm  Main.elm  Page.elm  Route.elm  Routes.elm  Session.elm  Todos.elm
Elm/src/Api/: Lists.elm  Session.elm  Task.elm  TaskList.elm  Tasks.elm  Todos.elm
Elm/src/Components/: Navbar.elm  Todos.elm
Elm/src/Models/: List.elm  Task.elm  TaskList.elm  TaskLists.elm  Tasks.elm  User.elm
Elm/src/Navigation/: AppUrl.elm  Routes.elm
Elm/src/Page/: List.elm  Lists.elm  Login.elm  LoginPending.elm  TaskList.elm  TaskLists.elm
Elm/static/: embedded.js  index.js  ports.js
ElmStarter/: app.css  package-lock.json  package.json
ElmStarter/src/: Flags.elm  Main.elm
Initital/: elm.json  index.html  index.js  makefile  package.json  ports.js
Initital/src/: Flags.elm  LocalStorage.elm  Main.elm  Routes.elm  Session.elm
Initital/src/Page/: Login.elm  LoginPending.elm
data/: settings.yaml
