name:                TodoServer
version:             0.1.0.0
synopsis:            Haskell-Backend für meine Todo-App Demo auf der DWX 2018
homepage:            https://github.com/MoritzGrossmann/devopenspace-elm-todo/Backend/Haskell#readme
license:             MIT
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten.Koenig@hotmail.de
copyright:           2019 Carsten Koenig
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
  other-modules:       Api.ListsApi
                     , Api.RouteApi
                     , Api.TodosApi
                     , Api.UsersApi
                     , Authentication
                     , Db
                     , Db.Internal
                     , Db.Lists
                     , Db.Tasks
                     , Db.Users
                     , Models.ListId
                     , Models.Lists
                     , Models.Tasks
                     , Models.User
                     , Page
                     , Settings
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bcrypt
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , jose
                     , mtl
                     , servant-auth
                     , servant-auth-server
                     , servant-blaze
                     , servant-docs
                     , servant-server
                     , sqlite-simple
                     , stm
                     , text
                     , wai
                     , wai-cors
                     , warp
                     , yaml
  default-language:    Haskell2010
  ghc-options:       -Wall
                     -fno-warn-orphans

executable TodoServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TodoServer
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MoritzGrossmann/devopenspace-elm-todo
  subdir:   Backend/Haskell
